force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__SellKingakuJPY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SellKingakuJPY__c</fullName>
    <inlineHelpText>Input the number and it will be automatically inserted to Unit Price of Selling(Local) in HB/L S/B if the field is blank</inlineHelpText>
    <label>UNIT PRICE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>