force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__SERVICE_PROVIDER_VENDOR_ENG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SERVICE_PROVIDER_VENDOR_ENG__c</fullName>
    <formula>clofor_com_cfs__Supplier__r.clofor_com_cfs__EnglishCompanyName__c</formula>
    <label>SERVICE PROVIDER VENDOR(ENG)</label>
    <type>Text</type>
</CustomField>