force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Service_StartDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Service_StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>APPLICATION DATE</label>
    <type>Date</type>
</CustomField>