force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__SpecialRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SpecialRate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Rate</label>
    <type>Checkbox</type>
</CustomField>