force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__Supplier__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input company name providing the service</inlineHelpText>
    <label>SERVICE PROVIDER VENDOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>