force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__TAX__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TAX__c</fullName>
    <label>TAX CATEGORY(ENG)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TAX</fullName>
            </value>
            <value>
                <fullName>TAX-FREE</fullName>
            </value>
            <value>
                <fullName>NON-TAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>