force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__TimeUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TimeUnit__c</fullName>
    <label>TIME UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TimeUnit</valueSetName>
    </valueSet>
</CustomField>