force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__TRUCK_FLEET_ID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TRUCK_FLEET_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCK &amp; FLEET ID</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>