force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__UNIT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UNIT__c</fullName>
    <inlineHelpText>When R/TON is chosen, weight and CBM are compared and larger one is taken as R/TON in Charge Unit of HB/L S/B. When CBM is chosen, CBM is taken as charge unit in HB/L S/B.</inlineHelpText>
    <label>UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B/L</fullName>
            </value>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>件</fullName>
                <label>Case</label>
            </value>
            <value>
                <fullName>CBM</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>コンテナ</fullName>
                <label>Container</label>
            </value>
            <value>
                <fullName>CTN</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Packet</fullName>
            </value>
            <value>
                <fullName>PALLET</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>R/TON</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>本</fullName>
                <label>Unit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>