force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__VATInvoiceAtPrintENG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvoiceAtPrintENG__c</fullName>
    <label>VAT INVOICE AT PRINT(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>