force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__WarehouseCostBuilding__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarehouseCostBuilding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WAREHOUSE COST BUILDING</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__WarehouseID__c</field>
            <operation>equals</operation>
            <valueField>clofor_com_cfs__FacilityCostBuilding__c.clofor_com_cfs__FacilityID__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__FacilityCostBuilding__c</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>