force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarehouseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WAREHOUSE ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipName>PRICING</relationshipName>
    <type>Lookup</type>
</CustomField>