force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/fields/clofor_com_cfs__wkTaxFlag__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__wkTaxFlag__c</fullName>
    <formula>IF( OR(TEXT(clofor_com_cfs__Zeibunrui__c) = &apos;課税&apos;,TEXT(clofor_com_cfs__Zeibunrui__c) = &apos;TAX(課税)&apos;,TEXT(clofor_com_cfs__Zeibunrui__c) = &apos;TAX&apos;), true , false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wkTAX-FLAG</label>
    <type>Checkbox</type>
</CustomField>