force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__air.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__air</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Air Forwarding.</description>
    <label>AIR</label>
</RecordType>