force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__Bulk.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Bulk</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with bulk cargos.</description>
    <label>BULK</label>
</RecordType>