force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__EMPTY.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__EMPTY</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Empty Container.</description>
    <label>EMPTY CONTAINER</label>
</RecordType>