force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__FCL.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FCL</fullName>
    <active>true</active>
    <description>Choose this Pricing when related with FCL Forwarding.</description>
    <label>FCL</label>
</RecordType>