force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__LCL.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LCL</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with LCL Forwarding.</description>
    <label>LCL</label>
</RecordType>