force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__Product.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Product</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Product</description>
    <label>PRODUCT</label>
</RecordType>