force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__RecordTypeDore.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__RecordTypeDore</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Full Contrainer Trucking. Other than Full Container Trucking, Choose Trucking.</description>
    <label>FULL CONTAINER TRUCK(DRAYAGE)</label>
</RecordType>