force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__SM_Consolidation_Cost_Allocation.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__SM_Consolidation_Cost_Allocation</fullName>
    <active>false</active>
    <description>Choose this Pricing for only Consolidation cost allocation to Forwarding Costs.</description>
    <label>Consolidation Cost Allocation</label>
</RecordType>