force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__Tracking.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Tracking</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Trucking. In case of Full Contrainer Trucking, choose the Full Container Trucking.</description>
    <label>TRUCKING</label>
</RecordType>