force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__Train.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Train</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Rail.</description>
    <label>RAIL</label>
</RecordType>