force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__Tukan.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Tukan</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Customs Clearance.</description>
    <label>CUSTOMS CLEARANCE</label>
</RecordType>