force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/recordTypes/clofor_com_cfs__Warehouse.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Warehouse</fullName>
    <active>false</active>
    <description>Choose this Pricing when related with Warehouse.</description>
    <label>WAREHOUSING</label>
</RecordType>