force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/validationRules/clofor_com_cfs__SERVICE_PROVIDER_VENDOR_IS_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__SERVICE_PROVIDER_VENDOR_IS_REQUIRED</fullName>
    <active>false</active>
    <description>SERVICE PROVIDER VENDOR must be provided for populating Tax Ration</description>
    <errorConditionFormula>ISBLANK( clofor_com_cfs__Supplier__c )</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Supplier__c</errorDisplayField>
    <errorMessage>SERVICE PROVIDER VENDOR is required</errorMessage>
</ValidationRule>