force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/listViews/clofor_com_cfs__Air.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Air</fullName>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ProductFlag__c</columns>
    <columns>clofor_com_cfs__ProductSearch__c</columns>
    <columns>clofor_com_cfs__Subcategory__c</columns>
    <columns>clofor_com_cfs__SellKingakuJPY__c</columns>
    <columns>clofor_com_cfs__SellAmountUSD__c</columns>
    <columns>clofor_com_cfs__BuyKingaku__c</columns>
    <columns>clofor_com_cfs__BuyAmountUSD__c</columns>
    <columns>clofor_com_cfs__UNIT__c</columns>
    <columns>clofor_com_cfs__Service_StartDate__c</columns>
    <columns>clofor_com_cfs__YukouKigen__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__TariffMaster__c.clofor_com_cfs__air</value>
    </filters>
    <label>Air</label>
    <language>en_US</language>
</ListView>