force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/listViews/clofor_com_cfs__all_service.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__all_service</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__VATInvoiceAtPrintLocal__c</columns>
    <columns>clofor_com_cfs__VATInvoiceAtPrintENG__c</columns>
    <columns>clofor_com_cfs__ProductFlag__c</columns>
    <columns>clofor_com_cfs__Remarks__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>