force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/listViews/clofor_com_cfs__Consolidation_Cost_Allocation_Master.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Consolidation_Cost_Allocation_Master</fullName>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EngProductSearch__c</columns>
    <columns>clofor_com_cfs__ProductSearch__c</columns>
    <columns>clofor_com_cfs__EngPrintProduct__c</columns>
    <columns>clofor_com_cfs__PrintProduct__c</columns>
    <columns>clofor_com_cfs__ProductFlag__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <columns>clofor_com_cfs__EngSubcategory__c</columns>
    <columns>clofor_com_cfs__Subcategory__c</columns>
    <columns>clofor_com_cfs__TAX__c</columns>
    <columns>clofor_com_cfs__Zeibunrui__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__ProductSearch__c</field>
        <operation>equals</operation>
        <value>マスター按分</value>
    </filters>
    <label>Consolidation Cost Allocation Master</label>
    <language>en_US</language>
</ListView>