force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/listViews/clofor_com_cfs__FCL3rdCounty.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__FCL3rdCounty</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Subcategory__c</columns>
    <columns>clofor_com_cfs__ContainerSize__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <columns>clofor_com_cfs__ProductSearch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__ProductSearch__c</field>
        <operation>contains</operation>
        <value>FCL三国間</value>
    </filters>
    <label>FCL Triangle</label>
    <language>en_US</language>
</ListView>