force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/listViews/clofor_com_cfs__LCLExport.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__LCLExport</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Subcategory__c</columns>
    <columns>clofor_com_cfs__BuyKingaku__c</columns>
    <columns>clofor_com_cfs__BuyAmountUSD__c</columns>
    <columns>clofor_com_cfs__UNIT__c</columns>
    <columns>clofor_com_cfs__Service_StartDate__c</columns>
    <columns>clofor_com_cfs__YukouKigen__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>clofor_com_cfs__ProductFlag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__ProductSearch__c</field>
        <operation>equals</operation>
        <value>LCL輸出</value>
    </filters>
    <label>LCL Export</label>
    <language>en_US</language>
</ListView>