force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/listViews/clofor_com_cfs__Truck.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Truck</fullName>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Subcategory__c</columns>
    <columns>clofor_com_cfs__Chasis__c</columns>
    <columns>clofor_com_cfs__CarType__c</columns>
    <columns>clofor_com_cfs__Distance__c</columns>
    <columns>clofor_com_cfs__BuyKingaku__c</columns>
    <columns>clofor_com_cfs__SellKingakuJPY__c</columns>
    <columns>clofor_com_cfs__UNIT__c</columns>
    <columns>clofor_com_cfs__YukouKigen__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <columns>clofor_com_cfs__Pick_Up__c</columns>
    <columns>clofor_com_cfs__HannyuNouhin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__ProductSearch__c</field>
        <operation>equals</operation>
        <value>配送</value>
    </filters>
    <label>Truck</label>
    <language>en_US</language>
</ListView>