force-app/main/default/objects/clofor_com_cfs__TariffMaster__c/listViews/clofor_com_cfs__Warehouse.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Warehouse</fullName>
    <columns>clofor_com_cfs__ProductID__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Subcategory__c</columns>
    <columns>clofor_com_cfs__BuyKingaku__c</columns>
    <columns>clofor_com_cfs__SellKingakuJPY__c</columns>
    <columns>clofor_com_cfs__UNIT__c</columns>
    <columns>clofor_com_cfs__YukouKigen__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>clofor_com_cfs__AvailableHarbor__c</columns>
    <columns>clofor_com_cfs__WarehouseType__c</columns>
    <columns>clofor_com_cfs__BuyAmountUSD__c</columns>
    <columns>clofor_com_cfs__SellAmountUSD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__ProductSearch__c</field>
        <operation>equals</operation>
        <value>倉庫</value>
    </filters>
    <label>Warehouse</label>
    <language>en_US</language>
</ListView>